<resources>
    <string name="app_name">NearbyIM</string>
    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="begin_scan_tip">Find friends with Nearby! Make sure that they are also using Nearby.</string>
    <string name="scanning_tip">Scan the messages broadcast by friends. Make sure that they are also using this function!</string>
    <string name="network_warn">No Internet access! Make sure you have Internet access and run this app again.</string>
    <string name="bluetooth_warn">Bluetooth is invalid! Turn on Bluetooth and run this app again.</string>
    <string name="gps_warn">GPS is invalid! Turn on GPS and run this app again.</string>
    <string name="btn_begin_scan">Start scan</string>
    <string name="btn_stop_scan">Stop scan</string>
    <string name="friend_list">Nearby people:</string>
    <string name="title_input_nickname">Please enter a nickname!</string>
    <string name="warn">Warn</string>
    <string name="hello">Hello, </string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_send">Send</string>
    <string name="btn_cancel">Cancel</string>
    <string name="nickname_empty_tip">Nickname cannot be empty!</string>
    <string name="nickname_invalid_tip">Illegal nickname, please try again!</string>
    <string name="login_failed">Login failed, please try again!</string>
    <string name="configuration_error">The configuration of APPGallery Connect is wrong. Please reconfigure agconnect-services.json!</string>
    <string name="permission_error">There is not granted app permission to use Message API!</string>
    <string name="login_success">Login success!</string>
    <string name="find_friends">Nearby friend discovery</string>
    <string name="looking">Looking for nearby friends…</string>
    <string name="stopped_looking">Stopped looking for nearby friends</string>
    <string name="string_send">Send</string>
    <string name="send_succeed">Send succeed</string>
    <string name="send_failed">Send_failed</string>
    <string name="please_input">Please input</string>
    <string name="string_connect">Connect</string>
    <string name="string_confirm">Confirm</string>
    <string name="content_empty_tip">Content cannot be empty!</string>
    <string name="common_lib_string_am">am</string>
    <string name="common_lib_string_pm">pm</string>
    <string name="nearby_friends">People nearby</string>
    <string name="face_to_face_build_group">Join nearby private group</string>
    <string name="chat_with_all_nearby_friends">Message broadcast with nearby people</string>
    <string name="chat_one_to_one">Private chat without internet</string>
    <string name="transfer_chat_history">Transfer chat history</string>
    <string name="create_group_by_same_numbers">Join a group chat with friends nearby by entering the required four digits</string>
    <string name="string_create_group_hint">These friends will also enter the group</string>
    <string name="btn_enterGroupChat">Enter group</string>
    <string name="no_network">No network</string>
    <string name="create_group_failed">Create_group_failed</string>
    <string name="create_group_succeed">Create_group_succeed</string>
    <string name="group_chat_with_nearby">Group chat with nearby</string>
    <string name="string_github_url"><u>https://github.com/HMS-Core/hms-nearby-demo/tree/master/NearbySimpleconnection</u></string>
    <string name="string_nearby_people_hint">Just around the corner</string>
    <string name="nearby_connection_scan_users_hint">In scanning, scan other people who use the function!</string>
    <string name="select_a_user_to_communicate">Select a user and chat with him or her</string>
    <string name="transfer_chat_history_hint">You can refer to this demo as below to implement one app transfer chat history to another device</string>
</resources>
